<?xml version="1.0"?>
<package format="2">
  <name>robot_control</name>
  <version>0.0.0</version>
  <description>The robot_control package</description>
  <maintainer email="dell@todo.todo">dell</maintainer>
  <license>TODO</license>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>joy</build_depend>
  <!-- <build_depend>JoyFeedbackArray</build_depend> -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>husky_gazebo</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <build_export_depend>joy</build_export_depend>
  <!-- <build_export_depend>JoyFeedbackArray</build_export_depend> -->
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>husky_gazebo</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>joy</exec_depend>
  <!-- <exec_depend>JoyFeedbackArray</exec_depend> -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>husky_gazebo</exec_depend>


  <export>

  </export>
</package>
